add jacoco, add tests, fix 4 code smells raised by sonarqube